# cppTest

./: CMakeLists.txt
src/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
tests/: CMakeLists.txt  testGoogleTest.cpp
